Fix some layout issues in commerce page

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -4,8 +4,12 @@ body {
   background-image: url('../img/bg.jpg');
   background-attachment: fixed;
   color: #ddd;
-  line-height: 1.5;
+  line-height: 1.25;
   font-size: 0.9rem;
+}
+
+.mini {
+  font-size: 0.85rem;
 }
 
 .text-muted, .mute {
@@ -65,6 +69,11 @@ body {
 
 #spacer-navbar {
   background-color: #000;
+}
+
+.table.table-sm td, .table.table-sm th {
+  border-top: 0px;
+  padding: 0.1rem;
 }
 
 .table td, .table th {
